tests/correctness/reject/parse_unclosed_paren.keel
def main(sys: System); Io:
    println("oops"
